Fix date issues with Safari compatibility, fix date picker component for mobile, fix bg color issue on dark mode, fix dynamic item inputs for mobile

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -11,6 +11,7 @@ body {
   margin: 0;
   font-family: v.$font-family;
   background-color: v.$lm-main-bg;
+  min-height: 100vh;
 
   @media (min-width: v.$md) {
     overflow: hidden;
